update copy site-wide

--- a/app/_includes/about-info.html
+++ b/app/_includes/about-info.html
@@ -11,7 +11,7 @@
 
             <div class="col-sm-6 inner-left-xs inner-bottom-xs">
               <h2>What we do</h2>
-              <p>We make mine machinery equipment and have been for nearly a century. At The Cincinnati Mine Machinery Company, quality is the driver of the entire product focus, manufacturing processes and the company-wide commitment to continuous improvement. Our customers desire reliable, quality products and our commitment is to provide that at a fair price, allowing us to utilize the best manufacturing tools and raw materials available. </p>
+              <p>We make mine machinery equipment and have been for nearly a century. The Cincinnati Mine Machinery Company is a leading designer/manufacturer of innovative products worldwide. Our Products are standard equipment on several OEM Machines. As a customer of CMM, your priorities become our priorities. We welcome a challenge and are well known for our ability to provide cost saving solutions to difficult problems. Our customers desire reliable, quality products and our commitment is to provide that at a fair price, allowing us to utilize the best manufacturing tools and raw materials available.</p>
             </div><!-- /.col -->
 
           </div><!-- /.row -->
