--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -85,7 +85,7 @@
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Jason Bratcher
-              <span>Eastern KY Sales Rep</span>
+              <span>West KY, Illinios, Indiana and West of the Mississippi Sales Rep</span>
             </h3>
           </figcaption>
 
@@ -167,7 +167,7 @@
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Kevin Clark
-              <span>Westerm KY Sales Rep</span>
+              <span>East Kentucky and Virginia Sales Rep</span>
             </h3>
           </figcaption>
 
