--- a/app/_includes/products-hero.html
+++ b/app/_includes/products-hero.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Built Cincinnati Tough.</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>To those who place value on experience and premier quality, the Cincinnati Mine Machinery Company has developed solutions for cutting and conveying since 1924.  We are recognized world-wide for products that combine high performance, reliability and trouble free service life.  We provide the STRONGEST LINK to the mining industry.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
