--- a/app/_includes/suppliers-list.html
+++ b/app/_includes/suppliers-list.html
@@ -44,6 +44,7 @@
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 9 Van Rensburg St. Ext 56<br>Witbank, 1035<br>South Africa</p></li>
           <li><i class="icon-mobile contact"></i> 013-6927190/5332</li>
+          <li><a href="http://www.cincinnatisa.co.za/"><i class="icon-network contact"></i> cincinnatisa.co.za</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Sumiton Mine Supply</h3>
