update product sections hero copy

--- a/app/_includes/products-hero-borer-miner.html
+++ b/app/_includes/products-hero-borer-miner.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Borer Miner Products</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>The Cincinnati Mine Machinery Company has worked for over 60 years in this specialized equipment market. These days Borer Miners are utilized for the production of Potash and Trona. In both applications products need to be rugged and durable to allow the end user to get the best life possible. Reliability is our strength along with our distributors in these markets, Bit Services LTD and Bookcliff Sales.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
