--- a/app/_includes/products-hero-continuous-miner.html
+++ b/app/_includes/products-hero-continuous-miner.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Continuous Miner Products</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>The Cincinnati Mine Machinery company is a key chain supplier of conveyor, crawler and ripper chains for many Original Equipment Manufacturers around the world. We make the strongest, most reliable conveyor chain that can be fitted to ALL continuous miners, to reduce your downtime providing you the lowest cost per ton. Cincinnati Mine has patented many conveyor chains and was the first to introduce the dual sprocket conveyor chain in the year of 2000. Call Cincinnati Mine for a chain to fit your machine.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
