--- a/app/_includes/products-hero-cutter-bars-chains.html
+++ b/app/_includes/products-hero-cutter-bars-chains.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Cutter Bars &amp; Chains</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>The Cincinnati Mine Machinery Company has been a key innovator in this field of conventional mining. Our Sales and Engineering teams over the years have patented many cutter chains and cutter bars for various applications. Working in salt, gypsum, coal and railway undercutting we can provide a solution to your application. Please give us a call to find a solution to improve your productivity.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
