--- a/app/_includes/products-hero-highwall-miner.html
+++ b/app/_includes/products-hero-highwall-miner.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Highwall Miner Products</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>The Cincinnati Mine Machinery Company has worked with all of the innovators of this mining technology. In developing cutter drive chains, sprockets and belly conveyor chains we can help you gain productivity. We have several different chain lacing cut patterns to suite you application. Give us a call for more details.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
