--- a/app/_includes/products-hero-roof-bolter.html
+++ b/app/_includes/products-hero-roof-bolter.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Roof Bolter Products</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>The Cincinnati Mine Machinery Company introduced the CC-416 in July of 2013. Since then we have been the “MINERS CHOICE” for crawler chains on their roof bolting machines. We have supplied our forged crawler chains for roof bolters and exceeded our customers’ expectations in every installation.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
