--- a/app/_includes/products-hero-shuttle-car.html
+++ b/app/_includes/products-hero-shuttle-car.html
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
       <h2>Shuttle Car Products</h2>
-      <p>Magnis modipsae que lib voloratati andigen daepeditem quiate ut reporemni aut labor. Laceaque quiae sitiorem rest non restibusaes es tumquam core posae volor remped modis volor. Doloreiur qui commolu ptatemp dolupta oreprerum tibusam. Eumenis et consent accullignis dentibea autem inisita posae volor conecus resto explabo.</p>
+      <p>Cincinnati Mine Machinery Company can supply your shuttle car with the dual strand continuous miner conveyor chain to gain reliability and lower your cost per ton.</p>
     </div><!-- /.col -->
   </div><!-- /.row -->
 </div><!-- /.container -->
