update product hero images for borer miners and roof bolters

--- a/app/_includes/products-hero-roof-bolter.html
+++ b/app/_includes/products-hero-roof-bolter.html
@@ -2,10 +2,10 @@
   <div class="row">
 
     <div class="col-sm-6 inner-right-xs text-right">
-      <figure><img src="/images/products/cc-416.png" alt="chains image"></figure>
+      <figure><img src="/images/products/roof-bolter-product-hero.jpg" alt="chains image"></figure>
     </div><!-- /.col -->
 
-    <div class="col-sm-6 inner-top-xs inner-left-xs">
+    <div class="col-sm-6 inner-top-none inner-left-xs">
       <h2>Roof Bolter Products</h2>
       <p>The Cincinnati Mine Machinery Company introduced the CC-416 in July of 2013. Since then we have been the “MINERS CHOICE” for crawler chains on their roof bolting machines. We have supplied our forged crawler chains for roof bolters and exceeded our customers’ expectations in every installation.</p>
     </div><!-- /.col -->
