--- a/app/_includes/products-hero-borer-miner.html
+++ b/app/_includes/products-hero-borer-miner.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-sm-6 inner-right-xs text-right">
-      <figure><img src="/images/products/lc-525-35.png" alt="chains image"></figure>
+      <figure><img src="/images/products/borer-miner-product-hero.jpg" alt="chains image"></figure>
     </div><!-- /.col -->
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
