update contact email to sales@cinmine.com

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -6,7 +6,7 @@
 
     <h2>Have a general inquiry?</h2>
 
-    <form id="contactform" class="forms" action="http://formspree.io/eliwilliamson@gmail.com" method="post">
+    <form id="contactform" class="forms" action="http://formspree.io/sales@cinmine.com" method="post">
 
       <input type="hidden" name="_next" value="/thanks" />
       <input type="text" name="_gotcha" style="display:none" />
