--- a/app/_includes/suppliers-hero.html
+++ b/app/_includes/suppliers-hero.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-sm-12">
         <header>
-          <h1>Check us out at your local supplier.</h1>
+          <h1>15 Warehouses <span>strategically located</span> <span>near you.</span></h1>
         </header>
       </div><!-- /.col -->
     </div><!-- ./row -->
