add new filter categories to continuous miners and borer miners product pages

--- a/app/_includes/products-filter-borer-miner.html
+++ b/app/_includes/products-filter-borer-miner.html
@@ -4,6 +4,8 @@
   <li><a href="#" data-filter=".trim-chains">Trim Chains</a></li>
   <li><a href="#" data-filter=".bit-holders">Bit Holders</a></li>
   <li><a href="#" data-filter=".guides">Guides</a></li>
+  <li><a href="#" data-filter=".sprockets">Sprockets</a></li>
+  <li><a href="#" data-filter=".cob-cutters">Cob Cutters</a></li>
 </ul><!-- /.filter -->
 
 <ul class="items col-3 gap">
