--- a/app/_includes/products-filter-continuous-miner.html
+++ b/app/_includes/products-filter-continuous-miner.html
@@ -5,6 +5,7 @@
   <li><a href="#" data-filter=".footshaft-assemblies">Footshaft Assemblies</a></li>
   <li><a href="#" data-filter=".bit-holders">Bit Holders</a></li>
   <li><a href="#" data-filter=".ripper-chains">Ripper Chains</a></li>
+  <li><a href="#" data-filter=".tools">Tools</a></li>
 </ul><!-- /.filter -->
 
 <ul class="items col-3 gap">
