add instruction text to people section on contact page

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -5,6 +5,7 @@
   <section id="contact-names" class="light-bg inner-xs inner-left-xs inner-right-xs">
 
     <h3 class="team-headline sidelines text-center"><span>Looking for someone?</span></h3>
+    <p class="text-small text-center">Click on the picture to display contact info.</p>
 
     <div class="row thumbs gap-md text-center">
 
