--- a/app/_includes/about-info.html
+++ b/app/_includes/about-info.html
@@ -5,12 +5,14 @@
           <div class="row inner-top-xs">
 
             <div class="col-sm-6 inner-right-xs inner-bottom-xs">
-              <h2>Who we are</h2>
+              <h2>Who We Are</h2>
               <p>Our Mission is to exceed our customers' expectations. Through continuous improvement, innovative thinking and time-honored values, we deliver quality, reliability and superior performance. With our people, partners and products, we are THE STRONGEST LINK™ in the mining industry.</p>
+              <h2>Who We Service</h2>
+              <p>Through the years, and still today, Cincinnati Mine Machinery has been servicing the Coal, Salt, Potash, Gypsum and Trona markets.</p>
             </div><!-- /.col -->
 
             <div class="col-sm-6 inner-left-xs inner-bottom-xs">
-              <h2>What we do</h2>
+              <h2>What We Do</h2>
               <p>We make mine machinery equipment and have been for nearly a century. The Cincinnati Mine Machinery Company is a leading designer/manufacturer of innovative products worldwide. Our Products are standard equipment on several OEM Machines. As a customer of CMM, your priorities become our priorities. We welcome a challenge and are well known for our ability to provide cost saving solutions to difficult problems. Our customers desire reliable, quality products and our commitment is to provide that at a fair price, allowing us to utilize the best manufacturing tools and raw materials available.</p>
             </div><!-- /.col -->
 
