update mission statement section on contact page

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -45,6 +45,7 @@
     <div class="col-sm-6 inner-top">
       <figure>
         <img src="/images/mgmt-team.jpg" alt="Our Management Team">
+        <figcaption>Names from left to right:  Bobby Stenger, Tony Stenger, Bill Stenger, Bob Stenger (President), Tim Jent, Randy Morris, and Ron Paolello.</figcaption>
       </figure>
     </div><!-- /.col -->
 
