update products for site from Randy’s emails

--- a/app/_includes/products-filter-borer-miner.html
+++ b/app/_includes/products-filter-borer-miner.html
@@ -44,6 +44,23 @@
     </figure>
   </li><!-- /.item -->
 
+  <li class="item thumb trim-chains">
+    <figure>
+
+      <div class="icon-overlay icn-link">
+        <a href="/products/5272/"><img src="/images/products/5272.png" alt="5272"></a>
+      </div><!-- /.icon-overlay -->
+
+      <figcaption class="bordered no-top-border">
+        <div class="info">
+          <h4><a href="/products/5272/">5272</a></h4>
+          <p>Trim Chains</p>
+        </div><!-- /.info -->
+      </figcaption>
+
+    </figure>
+  </li><!-- /.item -->
+
   <li class="item thumb bit-holders">
     <figure>
 
@@ -78,6 +95,23 @@
     </figure>
   </li><!-- /.item -->
 
+  <li class="item thumb cob-cutters">
+    <figure>
+
+      <div class="icon-overlay icn-link">
+        <a href="/products/c-15178/"><img src="/images/products/c-15178.png" alt="C-15178"></a>
+      </div><!-- /.icon-overlay -->
+
+      <figcaption class="bordered no-top-border">
+        <div class="info">
+          <h4><a href="/products/c-15178/">C-15178</a></h4>
+          <p>Cob Cutters</p>
+        </div><!-- /.info -->
+      </figcaption>
+
+    </figure>
+  </li><!-- /.item -->
+
   <li class="item thumb guides">
     <figure>
 
@@ -89,6 +123,23 @@
         <div class="info">
           <h4><a href="/products/various-guides/">Various Guides</a></h4>
           <p>Guides</p>
+        </div><!-- /.info -->
+      </figcaption>
+
+    </figure>
+  </li><!-- /.item -->
+
+  <li class="item thumb sprockets">
+    <figure>
+
+      <div class="icon-overlay icn-link">
+        <a href="/products/various-chain-sprockets/"><img src="/images/products/various-chain-sprockets.png" alt="Various Chain Sprockets"></a>
+      </div><!-- /.icon-overlay -->
+
+      <figcaption class="bordered no-top-border">
+        <div class="info">
+          <h4><a href="/products/various-chain-sprockets/">Various Chain Sprockets</a></h4>
+          <p>Sprockets</p>
         </div><!-- /.info -->
       </figcaption>
 
