--- a/app/_includes/products-filter-highwall-miner.html
+++ b/app/_includes/products-filter-highwall-miner.html
@@ -24,6 +24,23 @@
     </figure>
   </li><!-- /.item -->
 
+  <li class="item thumb conveyor-chains">
+    <figure>
+
+      <div class="icon-overlay icn-link">
+        <a href="/products/na-5154-mt/"><img src="/images/products/na-5154-mt.png" alt="NA-5154-MT"></a>
+      </div><!-- /.icon-overlay -->
+
+      <figcaption class="bordered no-top-border">
+        <div class="info">
+          <h4><a href="/products/na-5154-mt/">NA-5154-MT</a></h4>
+          <p>Conveyor Chains</p>
+        </div><!-- /.info -->
+      </figcaption>
+
+    </figure>
+  </li><!-- /.item -->
+
   <li class="item thumb cutter-chains">
     <figure>
 
