--- a/app/_includes/products-hero-cutter-bars-chains.html
+++ b/app/_includes/products-hero-cutter-bars-chains.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-sm-6 inner-right-xs text-right">
-      <figure><img src="/images/products/product-hero.png" alt="chains image"></figure>
+      <figure><img src="/images/products/19045.png" alt="chains image"></figure>
     </div><!-- /.col -->
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
