--- a/app/_includes/products-filter-cutter-bars-chains.html
+++ b/app/_includes/products-filter-cutter-bars-chains.html
@@ -10,12 +10,12 @@
     <figure>
 
       <div class="icon-overlay icn-link">
-        <a href="/products/dwg1/"><img src="/images/products/dwg1.png" alt="Dwg1"></a>
+        <a href="/products/38011-h/"><img src="/images/products/38011-h.png" alt="38011-H"></a>
       </div><!-- /.icon-overlay -->
 
       <figcaption class="bordered no-top-border">
         <div class="info">
-          <h4><a href="/products/dwg1/">Dwg1</a></h4>
+          <h4><a href="/products/38011-h/">38011-H</a></h4>
           <p>Cutter Bars</p>
         </div><!-- /.info -->
       </figcaption>
@@ -27,12 +27,12 @@
     <figure>
 
       <div class="icon-overlay icn-link">
-        <a href="/products/dwg2/"><img src="/images/products/dwg2.png" alt="Dwg2"></a>
+        <a href="/products/38012-p-ta/"><img src="/images/products/38012-p-ta.png" alt="38012 P-TA"></a>
       </div><!-- /.icon-overlay -->
 
       <figcaption class="bordered no-top-border">
         <div class="info">
-          <h4><a href="/products/dwg2/">Dwg2</a></h4>
+          <h4><a href="/products/38012-p-ta/">38012 P-TA</a></h4>
           <p>Cutter Bars</p>
         </div><!-- /.info -->
       </figcaption>
@@ -44,12 +44,12 @@
     <figure>
 
       <div class="icon-overlay icn-link">
-        <a href="/products/dwg3/"><img src="/images/products/dwg3.png" alt="Dwg3"></a>
+        <a href="/products/19045/"><img src="/images/products/19045.png" alt="19045"></a>
       </div><!-- /.icon-overlay -->
 
       <figcaption class="bordered no-top-border">
         <div class="info">
-          <h4><a href="/products/dwg3/">Dwg3</a></h4>
+          <h4><a href="/products/19045/">19045</a></h4>
           <p>Cutter Chains</p>
         </div><!-- /.info -->
       </figcaption>
@@ -61,12 +61,12 @@
     <figure>
 
       <div class="icon-overlay icn-link">
-        <a href="/products/dwg4/"><img src="/images/products/dwg4.png" alt="Dwg4"></a>
+        <a href="/products/190xs/"><img src="/images/products/190xs.png" alt="190XS"></a>
       </div><!-- /.icon-overlay -->
 
       <figcaption class="bordered no-top-border">
         <div class="info">
-          <h4><a href="/products/dwg4/">Dwg4</a></h4>
+          <h4><a href="/products/190xs/">190XS</a></h4>
           <p>Cutter Chains</p>
         </div><!-- /.info -->
       </figcaption>
