make hero height smaller

--- a/app/_includes/landing-hero.html
+++ b/app/_includes/landing-hero.html
@@ -1,7 +1,7 @@
 <!-- ============================================================= SECTION – HERO ============================================================= -->
 
 <section id="hero">
-  <div id="owl-main" class="owl-carousel height-lg owl-inner-nav owl-ui-lg">
+  <div id="owl-main" class="owl-carousel owl-inner-nav owl-ui-lg">
   </div><!-- /.owl-carousel -->
   <div id="hidden"></div>
 </section>
