remove tumblr integration and update hero images/copy

--- a/app/_includes/landing-hero.html
+++ b/app/_includes/landing-hero.html
@@ -2,6 +2,56 @@
 
 <section id="hero">
   <div id="owl-main" class="owl-carousel owl-inner-nav owl-ui-lg">
+
+    <div class="item" style="background-image: url(/images/homepage-carousel/slide1.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+          <h1 class="fadeInDown-1 light-color">Dual Sprocket Conveyor Chain</h1>
+          <p class="fadeInDown-2 light-color">Tons Better</p>
+          <div class="fadeInDown-3">
+            <a href="/products/continuous-miner-products" class="btn btn-large">Learn More</a>
+          </div><!-- /.fadeIn -->
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+    <div class="item" style="background-image: url(/images/homepage-carousel/slide2.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+          <h1 class="fadeInDown-1 light-color">CC-416 Crawler Chain</h1>
+          <p class="fadeInDown-2 light-color">Built to Last</p>
+          <div class="fadeInDown-3">
+            <a href="/products/roof-bolter-products" class="btn btn-large">Learn More</a>
+          </div><!-- /.fadeIn -->
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+    <div class="item" style="background-image: url(/images/homepage-carousel/slide3.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+          <h1 class="fadeInDown-1 light-color">Cutter Drive Chains that LAST</h1>
+          <p class="fadeInDown-2 light-color">7347-A Cutter chains</p>
+          <div class="fadeInDown-3">
+            <a href="/products/highwall-miner-products" class="btn btn-large">Learn More</a>
+          </div><!-- /.fadeIn -->
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+    <div class="item" style="background-image: url(/images/homepage-carousel/slide4.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+          <h1 class="fadeInDown-1 light-color">Dual Conveyor Chain</h1>
+          <p class="fadeInDown-2 light-color">Reliability</p>
+          <div class="fadeInDown-3">
+            <a href="/products/shuttle-car-products" class="btn btn-large">Learn More</a>
+          </div><!-- /.fadeIn -->
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+
   </div><!-- /.owl-carousel -->
   <div id="hidden"></div>
 </section>
