--- a/app/styles/reen/main.css
+++ b/app/styles/reen/main.css
@@ -108,6 +108,7 @@ h1 {
     font-size: 44px;
     line-height: 130%;
     margin-bottom: 25px;
+      font-weight: 900;
 }
 h2 {
     font-size: 26px;
