update product images per Randy’s feedback

--- a/app/_includes/products-hero-shuttle-car.html
+++ b/app/_includes/products-hero-shuttle-car.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-sm-6 inner-right-xs text-right">
-      <figure><img src="/images/products/da-5504-t.png" alt="chains image"></figure>
+      <figure><img src="/images/products/shuttle-car-hero.jpg" alt="chains image"></figure>
     </div><!-- /.col -->
 
     <div class="col-sm-6 inner-top-xs inner-left-xs">
