copy changes to employees and suppliers

--- a/app/_includes/suppliers-list.html
+++ b/app/_includes/suppliers-list.html
@@ -9,21 +9,21 @@
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 42 South Carbon Ave.<br>Price, UT 84501</p></li>
           <li><i class="icon-mobile contact"></i> 413-637-1110</li>
-          <li><a href="bookcliffsales.com"><i class="icon-network contact"></i> bookcliffsales.com</a></li>
+          <li><a href="http://bookcliffsales.com"><i class="icon-network contact"></i> bookcliffsales.com</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Bookcliff Sales, Inc (Wyoming)</h3>
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 2028 Sunset Drive<br>Roscksprings, WY 82901</p></li>
           <li><i class="icon-mobile contact"></i> 307-362-1917</li>
-          <li><a href="bookcliffsales.com"><i class="icon-network contact"></i> bookcliffsales.com</a></li>
+          <li><a href="http://bookcliffsales.com"><i class="icon-network contact"></i> bookcliffsales.com</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Champion Mine Supply, Inc</h3>
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 223 Pritts Distillery Road<br>Champion, PA 15622</p></li>
           <li><i class="icon-mobile contact"></i> 724-455-2902</li>
-          <li><a href="championminesupply.com"><i class="icon-network contact"></i> championminesupply.com</a></li>
+          <li><a href="http://championminesupply.com"><i class="icon-network contact"></i> championminesupply.com</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Cincinnati Mine AU</h3>
@@ -36,7 +36,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 inner-bottom-xs">
         <h3>Cincinnati Mine WV</h3>
         <ul class="contacts">
-          <li><i class="icon-location contact"></i><p> Route 10<br>Chapmanville, WV 25508</p></li>
+          <li><i class="icon-location contact"></i><p> 15 Commerce Park Circle<br>Chapmanville, WV 25508</p></li>
           <li><i class="icon-mobile contact"></i> 304-855-2836</li>
         </ul><!-- /.contacts -->
 
@@ -57,7 +57,7 @@
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 638 Lincoln Ave.<br>Madisonville, KY 42431</p></li>
           <li><i class="icon-mobile contact"></i> 270-825-0269</li>
-          <li><a href="woodruffsupply.biz"><i class="icon-network contact"></i> woodruffsupply.biz</a></li>
+          <li><a href="http://woodruffsupply.biz"><i class="icon-network contact"></i> woodruffsupply.biz</a></li>
         </ul><!-- /.contacts -->
       </div><!-- /.col -->
 
@@ -66,7 +66,7 @@
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 4247 FM 1021<br>El Indio Hwy.<br>Eagle Pass, TX 78852</p></li>
           <li><i class="icon-mobile contact"></i> 830-773-0311</li>
-          <li><a href="partservice.com"><i class="icon-network contact"></i> partservice.com</a></li>
+          <li><a href="http://partservice.com"><i class="icon-network contact"></i> partservice.com</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Bit Service Co. LTD.</h3>
