--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -30,6 +30,7 @@
             <h3>
               Ron Paolello
               <span>General Manager</span>
+              <span>Sales Manager</span>
             </h3>
           </figcaption>
 
@@ -56,7 +57,7 @@
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Robert C. Stenger
-              <span>Director of Sales and Marketing</span>
+              <span>Sales and Marketing</span>
             </h3>
           </figcaption>
 
@@ -101,7 +102,8 @@
             <div class="text-overlay">
               <div class="info">
                 <a href="mailto:nathanh3@verizon.net" class="contact-info">nathanh3@verizon.net</a>
-                <a href="tel:+15132569883" class="contact-info">513-256-9883</a>
+                <a href="tel:+15132569883" class="contact-info phone">Cell: 513-256-9883</a>
+                <a href="tel:+12769281025" class="contact-info phone">Home: 276-928-1025</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
@@ -131,7 +133,8 @@
             <div class="text-overlay">
               <div class="info">
                 <a href="mailto:paulls@horizonview.net" class="contact-info">paulls@horizonview.net</a>
-                <a href="tel:+15132569884" class="contact-info">513-256-9884</a>
+                <a href="tel:+15132569884" class="contact-info phone">Cell: 513-256-9884</a>
+                <a href="tel:+17406553380" class="contact-info phone">Home: 740-655-3380</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
@@ -149,7 +152,7 @@
         </figure>
       </div><!-- /.col -->
 
-      <div class="col-sm-6 thumb last-bottom">
+      <div class="col-sm-6 thumb">
         <figure class="member">
 
           <div class="member-image">
@@ -173,6 +176,37 @@
           </figcaption>
 
         </figure>
+      </div><!-- /.col -->
+
+    </div><!-- /.row -->
+
+    <div class="row thumbs gap-md text-center">
+
+      <div class="col-sm-6 thumb last-bottom">
+        <figure class="member">
+
+          <div class="member-image">
+
+            <div class="text-overlay">
+              <div class="info">
+                <a href="mailto:philippage@bellsouth.net" class="contact-info">philippage@bellsouth.net</a>
+                <a href="tel:+15132569885" class="contact-info">513-256-9885</a>
+              </div><!-- /.info -->
+            </div><!-- /.text-overlay -->
+
+            <img src="/images/people/phil.jpg">
+
+          </div><!-- /.member-image -->
+
+          <figcaption class="member-details bordered no-top-border">
+            <h3>
+              Phil Page
+              <span>West KY, Illinios, Indiana and West of the Mississippi Sales Rep</span>
+            </h3>
+          </figcaption>
+
+        </figure>
+
       </div><!-- /.col -->
 
     </div><!-- /.row -->
