--- a/app/_includes/suppliers-list.html
+++ b/app/_includes/suppliers-list.html
@@ -66,7 +66,7 @@
         <ul class="contacts">
           <li><i class="icon-location contact"></i><p> 4247 FM 1021<br>El Indio Hwy.<br>Eagle Pass, TX 78852</p></li>
           <li><i class="icon-mobile contact"></i> 830-773-0311</li>
-          <li><a href="http://partservice.com"><i class="icon-network contact"></i> partservice.com</a></li>
+          <li><a href="http://partsservice.com"><i class="icon-network contact"></i> partsservice.com</a></li>
         </ul><!-- /.contacts -->
 
         <h3>Bit Service Co. LTD.</h3>
