update/add photos & pdfs for CC-720 and CC-7M22 as well as remove photos from 550 series footshaft kits

--- a/app/_includes/products-filter.html
+++ b/app/_includes/products-filter.html
@@ -137,6 +137,23 @@
     <figure>
 
       <div class="icon-overlay icn-link">
+        <a href="/products/cc-7m22/"><img src="/images/products/cc-7m22.png" alt="cc-7M22"></a>
+      </div><!-- /.icon-overlay -->
+
+      <figcaption class="bordered no-top-border">
+        <div class="info">
+          <h4><a href="/products/cc-7m22/">CC-7M22</a></h4>
+          <p>Crawler Chains</p>
+        </div><!-- /.info -->
+      </figcaption>
+
+    </figure>
+  </li><!-- /.item -->
+
+  <li class="item thumb crawler-chains">
+    <figure>
+
+      <div class="icon-overlay icn-link">
         <a href="/products/cc-722/"><img src="/images/products/cc-722.png" alt="cc-722"></a>
       </div><!-- /.icon-overlay -->
 
