update area coverage copy for phil and jason on contact page

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -87,7 +87,7 @@
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Jason Bratcher
-              <span>West KY, Illinios, Indiana and West of the Mississippi Sales Rep</span>
+              <span>West KY, Illinios, Alabama, Indiana and West of the Mississippi Sales Rep</span>
             </h3>
           </figcaption>
 
@@ -201,7 +201,7 @@
           <figcaption class="member-details bordered no-top-border">
             <h3>
               Phil Page
-              <span>West KY, Illinios, Indiana and West of the Mississippi Sales Rep</span>
+              <span>West KY, Illinios, Alabama, Indiana and West of the Mississippi Sales Rep</span>
             </h3>
           </figcaption>
 
