Add Rick to contact page and remove Paul

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -132,19 +132,18 @@
 
             <div class="text-overlay">
               <div class="info">
-                <a href="mailto:paulls@horizonview.net" class="contact-info">paulls@horizonview.net</a>
-                <a href="tel:+15132569884" class="contact-info phone">Cell: 513-256-9884</a>
-                <a href="tel:+17406553380" class="contact-info phone">Home: 740-655-3380</a>
+                <a href="mailto:rickdessecker@gmail.com" class="contact-info">rickdessecker@gmail.com</a>
+                <a href="tel:+15132569885" class="contact-info phone">513-256-9885</a>
               </div><!-- /.info -->
             </div><!-- /.text-overlay -->
 
-            <img src="/images/people/paul.jpg">
+            <img src="/images/people/rick.jpg">
 
           </div><!-- /.member-image -->
 
           <figcaption class="member-details bordered no-top-border">
             <h3>
-              Paul Saunders
+              Rick Dessecker
               <span>Ohio, Pennsylvania and Northern WV Sales Rep</span>
             </h3>
           </figcaption>
