add captcha to forms to filter out spam emails better

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -28,7 +28,7 @@
           <textarea name="message" class="form-control" placeholder="Enter your message ..."></textarea>
         </div><!-- /.col -->
       </div><!-- /.row -->
-
+      <div data-netlify-recaptcha></div>
       <button type="submit" class="btn btn-default btn-submit btn-large btn-green" value="send">Submit message</button>
 
     </form>
