fix google maps

--- a/app/_includes/shared/head.html
+++ b/app/_includes/shared/head.html
@@ -15,8 +15,8 @@
     {% include shared/google-analytics.html %}
 
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900,300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
