add netlify recaptcha to form

--- a/app/_includes/contact-form.html
+++ b/app/_includes/contact-form.html
@@ -6,7 +6,7 @@
 
     <h2>Have a general inquiry?</h2>
 
-    <form id="contact" class="forms" action="/thanks" netlify netlify-honeypot="bot-field">
+    <form id="contact" class="forms" action="/thanks" netlify netlify-honeypot="bot-field" netlify-recaptcha>
       <input type="hidden" name="bot-field">
       <div class="row">
         <div class="col-sm-6">
