add address to contact page

--- a/app/_includes/contact-people.html
+++ b/app/_includes/contact-people.html
@@ -1,6 +1,11 @@
 <!-- ============================================================= SECTION – CONTACT PEOPLE ============================================================= -->
 
 <div class="col-md-4">
+  <section id="contact-names" class="light-bg inner-xs inner-left-xs inner-right-xs">
+
+    <h3 class="team-headline sidelines text-center"><span>Cincinnati Mine Machineray Co.</span></h3>
+    <p class="text-small text-center">2950 Jonrose Ave.<br>Cincinnati, Ohio 45239<br>Phone: <a href="tel:+15137284040">513-728-4040</a><br>Fax: <a href="tel:+15137284041">513-728-4041</a><br><strong><a href="https://www.google.com/maps/dir/2950+Jonrose+Ave,+Cincinnati,+OH+45239/@39.214526,-84.5849468,17z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x88404ac035d64521:0x3d7c438b478cd391!2m2!1d-84.582801!2d39.214526">Get Directions</a></strong></p>
+  </section>
 
   <section id="contact-names" class="light-bg inner-xs inner-left-xs inner-right-xs">
 
